Fix stink-winner vertical alignment: use flexbox to override Bootstrap floats

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -201,12 +201,15 @@ body {
 // Block: stink-winner
 .stink-winner {
   padding: 16px 0;
+  display: flex;
   align-items: center;
 
+  [class*="col-"] {
+    float: none;
+  }
+
   &__route-col {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
   }
 
   &__route {
